--- a/src/index.css
+++ b/src/index.css
@@ -189,3 +189,12 @@ html, body {
 .with-navbar-safe-area {
   padding-top: calc(64px + env(safe-area-inset-top, 0px));
 }
+
+/* Скрытие скроллбара на всех платформах */
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome/Safari/Webkit */
+}
